--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title><center>Hello, world!</center></title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1><center>Hello, world!</center></h1>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
